<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">




    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_height="wrap_content">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight=".7"
            android:layout_marginRight="4dp"
            android:src="@mipmap/ghandsse" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:background="@mipmap/pager"
            android:gravity="center"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:text="@string/fse"
            android:layout_weight=".4"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:src="@mipmap/three"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:src="@mipmap/line"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="56dp"
            android:id="@+id/back_g_3"
            android:layout_height="63dp"
            android:src="@drawable/back" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/finger"
            android:textSize="18dp"
            android:id="@+id/fingetmode_g_3"
            android:gravity="center"
            android:layout_weight=".3"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/group"
            android:layout_weight=".3"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>






</LinearLayout>