<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_weight=".5"
            android:src="@mipmap/cloud" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="ooooooooooooooooooooooooooooo"
            android:textColor="@color/white"
            android:layout_weight=".5"
            android:layout_height="wrap_content"/>
    </LinearLayout>







    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:background="@mipmap/pager"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="3dp"
            android:text="@string/gyek"
            android:layout_weight=".9"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight=".5"
            android:layout_marginRight="4dp"
            android:src="@mipmap/gnums" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:src="@mipmap/yek"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:src="@mipmap/line"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/finger"
            android:textSize="18dp"
            android:gravity="center"
            android:id="@+id/fingetmode_g_1"
            android:layout_weight=".3"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/group"
            android:layout_weight=".3"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="56dp"
            android:id="@+id/next_g_1"
            android:layout_height="63dp"
            android:src="@drawable/next" />

    </LinearLayout>






</LinearLayout>